# spring-statement-personal-calculator

./: README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy-modal.yml
src/: App.jsx
src/components/: SpringStatementCalculator.css  SpringStatementCalculator.jsx
src/uk_budget_data/: api.py  modal_app.py  spring_statement.py
