[project]
name = "spring-statement-personal-calculator"
version = "1.0.0"
description = "Spring Statement 2025 Personal Calculator — see how policy changes affect your household"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "policyengine-uk>=2.74.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uk_budget_data"]
